--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 sudo: false
+before_install:
+  - npm install -g npm
+  - npm update -g npm
 language: node_js
 node_js:
   - "5"
   - "4"
+  - "0.12"
+  - "0.10"
