--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "mockgoose",
-  "main": "built/mockgoose.js",
-  "types": "built/mockgoose.d.ts",
   "description": "Mockgoose is an in memory database mock to allow for testing of applications that rely on Mongoose.",
-  "version": "7.3.3",
+  "version": "6.0.8",
   "author": {
     "name": "Anthony McCormick",
-    "email": "anthony.mccormick@gmail.com"
+    "email": "anthony.mccormick AT gmail.com"
   },
   "keywords": [
     "mongodb",
@@ -21,33 +19,32 @@
     "in memory"
   ],
   "scripts": {
-    "test": "mocha"
+    "hint": "jshint --config .jshintrc Mockgoose.js test",
+    "test": "DEBUG=mongodb*,Mockgoose mocha --timeout 50000 test",
+    "test-debug": "DEBUG=mongodb*,Mockgoose mocha debug --timeout 50000 test"
   },
+  "main": "Mockgoose",
+  "files": [
+    "Mockgoose.js",
+    "lib/"
+  ],
   "engines": {
-    "node": ">=4"
+    "node": ">=0.10.0"
   },
   "dependencies": {
-    "async": "2.1.5",
     "debug": "2.2.0",
-    "fs-extra": "^2.0.0",
-    "https-proxy-agent": "1.0.0",
-    "mongodb-prebuilt": "^6.3.3",
-    "portfinder": "^1.0.13",
-    "rimraf": "^2.6.1",
-    "uuid": "^3.0.1"
+    "mongodb-prebuilt": "^5.0.6",
+    "portfinder": "^1.0.3",
+    "rimraf": "^2.5.1",
+	"q": "^1.4.1"
   },
   "devDependencies": {
-    "@types/node-uuid": "0.0.28",
-    "@types/node": "^6.0.58",
-    "@types/mongoose": "^4.7.6",
-    "@types/fs-extra": "~0.0.37",
-    "@types/async": "~2.0.39",
     "chai": "~2.2.0",
     "mocha": "~2.2.4",
     "mongoose": "*"
   },
   "bugs": {
-    "url": "https://github.com/Mockgoose/Mockgoose/issues"
+    "url": "https://github.com/mccormicka/Mockgoose/issues"
   },
   "repository": "Mockgoose/Mockgoose",
   "homepage": "https://github.com/Mockgoose/Mockgoose",
